--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -1,12 +1,16 @@
 /* This style.css is setting up for global */
 
-
 * {
   box-sizing: border-box;
 }
 
-#app {
+html,
+body {
 	height: 100%;
+}
+
+#app {
+  height: 100%;
 }
 
 .wrapper {
@@ -23,10 +27,10 @@
 .footer {
   flex-shrink: 0;
   /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
-  padding: 1%;
+  padding: 10px;
   background: #1b1c1d;
   color: white;
   text-align: center;
-  margin-top: 7%;
+  margin-top: 70px;
   border-top: 1px solid gray;
 }
