--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -46,16 +46,15 @@ body {
 }
 /* flex sticky footer end */
 
-
 /* when screen is smaller put tags on top and remove sticky side area */
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 767px) {
   .inner-wrapper {
     flex-direction: column-reverse;
   }
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 768px) {
   .sticky-side-area {
     position: -webkit-sticky;
     position: sticky;
@@ -63,4 +62,9 @@ body {
     align-self: flex-start;
     width: 30%;
   }
+}
+
+/* transition for link */
+a {
+  transition: 0.2s;
 }
