--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -74,3 +74,47 @@ a {
   font-size: 100%;
   font-weight: 600;
 }
+
+/* post title */
+.post-title {
+  text-decoration: none;
+  color: black;
+  font-weight: 300;
+}
+
+/* time */
+.timeline {
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: column;
+}
+.time {
+  align-self: flex-end;
+}
+
+/* stars */
+.fa-star {
+  font-size: 1em;
+}
+.empty-stars,
+.full-stars {
+  display: inline;
+}
+.empty-stars {
+  margin-left: -0.25em;
+}
+
+/* mx */
+.mx-auto-m {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* hover panel */
+
+.post:hover,
+.comment:hover {
+  background: #f8f9fa;
+}
